# ChangeLog for app-arch/unzip
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/unzip/ChangeLog,v 1.45 2006/09/03 20:15:25 kumba Exp $

  04 Sep 2006; Joshua Kinard <kumba@gentoo.org> unzip-5.52-r1.ebuild:
  Marked stable on mips.

  18 Aug 2006; Bryan Østergaard <kloeri@gentoo.org> unzip-5.52-r1.ebuild:
  Stable on alpha.

  16 Aug 2006; Markus Rothe <corsair@gentoo.org> unzip-5.52-r1.ebuild:
  Stable on ppc64

  09 Aug 2006; Danny van Dyk <kugelfang@gentoo.org> unzip-5.52-r1.ebuild:
  Marked stable on amd64.

  05 Aug 2006; Michael Hanselmann <hansmi@gentoo.org> unzip-5.52-r1.ebuild:
  Stable on ppc.

  03 Aug 2006; Gustavo Zacarias <gustavoz@gentoo.org> unzip-5.52-r1.ebuild:
  Stable on hppa

  03 Aug 2006; Gustavo Zacarias <gustavoz@gentoo.org> unzip-5.52-r1.ebuild:
  Stable on sparc

  31 Jul 2006; Andrej Kacian <ticho@gentoo.org> unzip-5.52-r1.ebuild:
  Stable on x86. Bug #142149, by Daniel Black <dragonheart at gentoo.org>.

  05 Apr 2006; Diego Pettenò <flameeyes@gentoo.org> unzip-5.52-r1.ebuild:
  Add ~x86-fbsd keyword.

  15 Feb 2006; Mike Frysinger <vapier@gentoo.org> unzip-5.52.ebuild,
  unzip-5.52-r1.ebuild:
  Robert Sebastian Gerus adds support for DragonFly BSD #122843.

*unzip-5.52-r1 (04 Oct 2005)

  04 Oct 2005; Mike Frysinger <vapier@gentoo.org>
  +files/unzip-5.52-no-exec-stack.patch, +unzip-5.52-r1.ebuild:
  Make sure unzip isnt built with an executable stack.

  09 Sep 2005; Aron Griffis <agriffis@gentoo.org> unzip-5.52.ebuild:
  Mark 5.52 stable on alpha

  03 Sep 2005; Markus Rothe <corsair@gentoo.org> unzip-5.52.ebuild:
  Stable on ppc64

  18 Aug 2005; Michael Hanselmann <hansmi@gentoo.org> unzip-5.52.ebuild:
  Stable on ppc.

  18 Aug 2005; Aaron Walker <ka0ttic@gentoo.org> unzip-5.52.ebuild:
  Stable on mips.

  16 Aug 2005; Gustavo Zacarias <gustavoz@gentoo.org> unzip-5.52.ebuild:
  Stable on sparc

  23 Jul 2005; Kito <kito@gentoo.org> unzip-5.52.ebuild: