@@ -3,19 +3,18 @@ MD5 b17d0181200f3e1f47a55b54eb93527d files/unzip-5.52-no-exec-stack.patch 334
 RMD160 61fc11080b86f787c20b0cc821c3fda813f9ec7d files/unzip-5.52-no-exec-stack.patch 334
 SHA256 40d499b81504755083d04a33cf6e4144b0721691e65c9c596b803654b27978c8 files/unzip-5.52-no-exec-stack.patch 334
 DIST unzip552.tar.gz 1140291 RMD160 b749b0923bc4cceaa6f937aef688e9713a84328c SHA1 1831bd59b9e607a69052f83b263384895e2d4a19 SHA256 145d95e2ef1ef9add2e3c97d1340907e33ab8749eb1235372e7f0b7af600a8e9
-EBUILD unzip-5.52-r1.ebuild 1501 RMD160 07826333063fe0b5a5e956abb259e27d2b9b82b9 SHA1 9749507967a3006b7864a1ca948f7ef67c9d2e46 SHA256 2e86694e7e9ecd43ed235e4710613cd4892f47020b65ecf3f4abc8f8a8884b59
-MD5 9de85eee0c50786b3156bcf9c3cdf008 unzip-5.52-r1.ebuild 1501
-RMD160 07826333063fe0b5a5e956abb259e27d2b9b82b9 unzip-5.52-r1.ebuild 1501
-SHA256 2e86694e7e9ecd43ed235e4710613cd4892f47020b65ecf3f4abc8f8a8884b59 unzip-5.52-r1.ebuild 1501
-MISC ChangeLog 5103 RMD160 fbc5bef0ef86651c550c9edd5f8b6ae6cb5a19f1 SHA1 b6cea0f881238d2d21278a8aa083021aae802b17 SHA256 09434ba412fde84a7885b0eff36d75e258c7c6a7fd775baaded3f3999363fc88
-MD5 d64dc0773a8d0ca5c6637bae46157e4d ChangeLog 5103
-RMD160 fbc5bef0ef86651c550c9edd5f8b6ae6cb5a19f1 ChangeLog 5103
-SHA256 09434ba412fde84a7885b0eff36d75e258c7c6a7fd775baaded3f3999363fc88 ChangeLog 5103
+EBUILD unzip-5.52-r1.ebuild 1549 RMD160 2bc96a9b8a132dfee55edb1ea21418a1e7c0c016 SHA1 30c9095dd7d942eaa59a5db0bf741e0b1652363e SHA256 3ac12674648380e18b8e968bf3dd8dac617751bf4f85cf2f9262ca0e8cffc132
+MD5 064a1a60e27ace73d754ed7071f0a12f unzip-5.52-r1.ebuild 1549
+RMD160 2bc96a9b8a132dfee55edb1ea21418a1e7c0c016 unzip-5.52-r1.ebuild 1549
+SHA256 3ac12674648380e18b8e968bf3dd8dac617751bf4f85cf2f9262ca0e8cffc132 unzip-5.52-r1.ebuild 1549
+MISC ChangeLog 5246 RMD160 8d2ea118bf45a98bd2fa47a491f8c1a33f578f38 SHA1 88aa15a7ccc7d37d9488045cb1b52af75c374f30 SHA256 8107932dc3ab920f04c4fa0dfefecb910dd529dbd4dbcdfc0efc0a62996fdfb9
+MD5 c96e8ac6bd947223a0da94ac27c2830d ChangeLog 5246
+RMD160 8d2ea118bf45a98bd2fa47a491f8c1a33f578f38 ChangeLog 5246
+SHA256 8107932dc3ab920f04c4fa0dfefecb910dd529dbd4dbcdfc0efc0a62996fdfb9 ChangeLog 5246
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 metadata.xml 164
 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 metadata.xml 164
-size 229 files/digest-unzip-5.52-r1 229
+MD5 e5b030a7b3712d9ac1e9877ebc63c6a0 files/digest-unzip-5.52-r1 229
 RMD160 e5c2b56e33d9a7f76df195fb2f05923ed9be0afb files/digest-unzip-5.52-r1 229
 SHA256 82c6fa1477eee4e7547acc567a7e1a685b1df88fc0f19dd3674717256d20630c files/digest-unzip-5.52-r1 229
-MD5 e5b030a7b3712d9ac1e9877ebc63c6a0 files/digest-unzip-5.52-r1 229
