@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/unzip/unzip-5.52-r1.ebuild,v 1.16 2006/09/03 20:15:25 kumba Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/unzip/unzip-5.52-r1.ebuild,v 1.17 2006/10/24 09:55:15 uberlord Exp $
 
 EAPI="prefix"
 
@@ -12,7 +12,7 @@ SRC_URI="ftp://ftp.info-zip.org/pub/infozip/src/${PN}${PV/.}.tar.gz"
 
 LICENSE="Info-ZIP"
 SLOT="0"
-KEYWORDS="~ppc ~ppc-macos"
+KEYWORDS="~ppc-macos"
 IUSE=""
 
 DEPEND=""
@@ -39,8 +39,8 @@ src_compile() {
 	case ${CHOST} in
 		i?86*-linux*) TARGET=linux_asm ;;
 		*-linux*)     TARGET=linux_noasm ;;
-		*-dragonfly*) TARGET=freebsd ;;
-		*-freebsd*)   TARGET=freebsd ;;
+		*-dragonfly*) use x86 && TARGET=freebsd || TARGET=bsd ;;
+		*-freebsd*)   use x86 && TARGET=freebsd || TARGET=bsd ;;
 		*-openbsd*)   TARGET=bsd ;;
 		*-darwin*)    TARGET=macosx ;;
 		*)            die "Unknown target, you suck" ;;
