@@ -1,6 +1,10 @@
 # ChangeLog for app-arch/unzip
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/unzip/ChangeLog,v 1.45 2006/09/03 20:15:25 kumba Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/unzip/ChangeLog,v 1.46 2006/10/24 09:55:15 uberlord Exp $
+
+  24 Oct 2006; Roy Marples <uberlord@gentoo.org> unzip-5.52-r1.ebuild:
+  Don't assume that freebsd == i386 :)
+  Added ~sparc-fbsd keyword.
 
   04 Sep 2006; Joshua Kinard <kumba@gentoo.org> unzip-5.52-r1.ebuild:
   Marked stable on mips.
